# TikDown

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml
backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 96bcee3a8d12_initial_schema.py
backend/src/: config.py  main.py
backend/src/api/routes/: accounts.py  auth.py  cookies.py  events.py  monitor.py  videos.py
backend/src/core/: auth.py  backoff.py  circuit_breaker.py  crypto.py  download_engine.py  task_queue.py
backend/src/core/notifications/: base.py  discord.py  generic_webhook.py  service.py  telegram.py
backend/src/db/: session.py
backend/src/db/models/: __init__.py  account.py  cookie.py  event.py  setting.py  video.py
backend/src/schemas/: account.py  auth.py  cookie.py  monitor.py  video.py
backend/src/services/: monitor.py
backend/src/tests/unit/: test_backoff.py  test_circuit_breaker.py  test_cookies.py  test_crypto.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Badge.tsx  ProgressBar.tsx  Sidebar.tsx
frontend/src/hooks/: useAppStore.ts  useEventSource.ts
frontend/src/pages/: LoginPage.tsx
frontend/src/pages/Dashboard/: ActivityFeed.tsx  DashboardCards.tsx  DashboardPage.tsx  MonitorPanel.tsx
frontend/src/pages/Gallery/: GalleryPage.tsx  VideoCard.tsx  VideoGrid.tsx  (+1 more)
frontend/src/routes/: ProtectedRoute.tsx
frontend/src/services/: api.ts  queries.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
(+7 files in other folders)
