[project]
name = "tikdown-backend"
version = "0.1.0"
description = "TikDown - TikTok video monitor and downloader"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "apscheduler>=3.11.3",
    "argon2-cffi>=25.1.0",
    "cryptography>=49.0.0",
    "curl-cffi==0.15.0",
    "fastapi[standard]>=0.128",
    "httpx>=0.28.1",
    "pydantic>=2",
    "pydantic-settings>=2",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0",
    "sse-starlette>=3.4.5",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
    "yt-dlp==2026.6.9",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
